--- a/styles/homeStyle.css
+++ b/styles/homeStyle.css
@@ -4,10 +4,17 @@
     box-sizing: border-box;
 }
 
+body,
+html {
+    overflow: hidden
+}
+
 body {
     height: 100vh;
     width: 100vw;
-    background-image: url(/styles/img/RedPage/background_canap_rouge.jpg);
+    background-image: url(../styles/img/RedPage/background_canap_rouge.jpg);
+    font-family: 'Work Sans', sans-serif;
+    margin: .5em;
 }
 
 /* BACKGROUND CHANGE */
@@ -24,20 +31,11 @@ body {
     background-image: url(/styles/img/YellowPage/background_canap_jaune.jpg);
 }
 
-
 /*  */
 
-/* BUTTON CHANGE */
+/* BUTTON CONVERT */
 
-.btnRedPage {}
-
-.btnBluePage {}
-
-.btnYellowPage {}
-
-/*  */
-
-input:focus {
+.btn input:focus {
     outline: none !important;
 }
 
@@ -45,12 +43,22 @@ input:focus {
     display: flex;
     justify-content: space-between;
     min-height: 25px;
-    height: 5vh;
+    height: 4vh;
+}
+
+#burgerMenuContainer {
+    margin: .5em;
+    margin-right: 1em;
+    height: 3em;
+}
+
+.burgerMenuIcon:hover {
+    cursor: pointer;
 }
 
 #mainContainer {
     display: grid;
-    grid-template-columns: 20% 60% 20%;
+    grid-template-columns: 20% 50% 20%;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     height: 95vh;
 }
@@ -62,6 +70,30 @@ input:focus {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#brandDescription,
+#oldPrice {
+    color: white;
+    font-size: 1.4em;
+    margin-bottom: 1.3em;
+}
+
+#priceDisplay {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#oldPrice {
+    text-decoration: line-through;
+    font-weight: 800;
+}
+
+#newPrice {
+    color: white;
+    font-size: 2.5em;
+    font-weight: 700;
 }
 
 #inputContainer,
@@ -100,6 +132,8 @@ input:focus {
     grid-column: 3/4;
     grid-row: 1/6;
     z-index: 0;
+    display: flex;
+    justify-content: flex-start;
 }
 
 #cactusPicture {
@@ -137,7 +171,7 @@ input:focus {
 /* COLOR */
 
 .couchToTheRight {
-    transform: translateX(-1200px);
+    transform: translateX(-1300px);
     transition: all 1.5s ease-in-out;
 }
 
