--- a/styles/homeStyle.css
+++ b/styles/homeStyle.css
@@ -6,13 +6,18 @@
 
 body,
 html {
-    overflow: hidden
+    overflow: hidden;
+    user-select: none;
+}
+
+*:focus {
+    outline: none;
 }
 
 body {
     height: 100vh;
     width: 100vw;
-    background-image: url(./styles/img/RedPage/background_canap_rouge.jpg);
+    background-image: url(/styles/img/RedPage/background_canap_rouge.jpg);
     font-family: 'Work Sans', sans-serif;
     margin: .5em;
 }
@@ -20,24 +25,20 @@ body {
 /* BACKGROUND CHANGE */
 
 .bagroundRedPage {
-    background-image: url(./styles/img/RedPage/background_canap_rouge.jpg)
+    background-image: url(/styles/img/RedPage/background_canap_rouge.jpg)
 }
 
 .backgroundBluePage {
-    background-image: url(./styles/img/BluePage/background_canap_bleu.jpg);
+    background-image: url(/styles/img/BluePage/background_canap_bleu.jpg);
 }
 
 .backgroundYellowPage {
-    background-image: url(./styles/img/YellowPage/background_canap_jaune.jpg);
+    background-image: url(/styles/img/YellowPage/background_canap_jaune.jpg);
 }
 
 /*  */
 
 /* BUTTON CONVERT */
-
-.btn input:focus {
-    outline: none !important;
-}
 
 #header {
     display: flex;
@@ -58,7 +59,7 @@ body {
 
 #mainContainer {
     display: grid;
-    grid-template-columns: 20% 50% 20%;
+    grid-template-columns: 30% 30% 10% 15%;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     height: 95vh;
 }
@@ -102,6 +103,11 @@ body {
     grid-column: 2/3;
 }
 
+#inputConvertContainer {
+    display: flex;
+    justify-content: space-between;
+}
+
 #inputContainer {
     grid-row: 1/3;
     display: flex;
@@ -114,6 +120,7 @@ body {
     grid-row: 3/6;
     position: relative;
     z-index: 1;
+    margin-left: -10vw;
 }
 
 #couchPicture {
@@ -128,7 +135,7 @@ body {
     justify-content: center;
 }
 
-#decorationContainer {
+#furnitureContainer {
     grid-column: 3/4;
     grid-row: 1/6;
     z-index: 0;
@@ -136,17 +143,17 @@ body {
     justify-content: flex-start;
 }
 
-#cactusPicture {
+#furniturePicture {
     padding-right: 50vw;
     margin-right: 50vw;
 }
 
-/* BUTTONS */
-
-.btn {
-    border-radius: 50px;
-
+#logoDescription {
+    height: 2em;
+    width: 3em;
 }
+
+/* BUTTONS */
 
 .btn:hover {
     cursor: pointer;
@@ -166,6 +173,28 @@ body {
 .buttonToHide {
     background: none;
     border: none;
+}
+
+#buyButton:hover {
+    cursor: pointer;
+}
+
+.btnCouch {
+    content: url("/styles/img/btn-couch/couch.svg");
+    height: auto;
+    width: auto;
+}
+
+.btnBed {
+    content: url("/styles/img/btn-couch/bed.svg")
+}
+
+.btnCouchSelected {
+    content: url("/styles/img/btn-couch/couch-selected.svg")
+}
+
+.btnBedSelected {
+    content: url("/styles/img/btn-couch/bed-selected.svg")
 }
 
 /* COLOR */
