--- a/styles/homeStyle.css
+++ b/styles/homeStyle.css
@@ -17,7 +17,7 @@ html {
 body {
     height: 100vh;
     width: 100vw;
-    background-image: url(./img/RedPage/background_canap_rouge.jpg);
+    background-image: url(styles/img/RedPage/background_canap_rouge.jpg);
     font-family: 'Work Sans', sans-serif;
     margin: .5em;
 }
