--- a/styles/homeStyle.css
+++ b/styles/homeStyle.css
@@ -17,7 +17,7 @@ html {
 body {
     height: 100vh;
     width: 100vw;
-    background-image: url(.././styles/img/RedPage/background_canap_rouge.jpg);
+    background-image: url(../styles/img/RedPage/background_canap_rouge.jpg);
     font-family: 'Work Sans', sans-serif;
     margin: .5em;
 }
@@ -25,11 +25,11 @@ body {
 /* BACKGROUND CHANGE */
 
 .bagroundRedPage {
-    background-image: url(./../styles/img/RedPage/background_canap_rouge.jpg)
+    background-image: url(../styles/img/RedPage/background_canap_rouge.jpg)
 }
 
 .backgroundBluePage {
-    background-image: url(./styles/img/BluePage/background_canap_bleu.jpg);
+    background-image: url(../styles/img/BluePage/background_canap_bleu.jpg);
 }
 
 .backgroundYellowPage {
@@ -180,21 +180,21 @@ body {
 }
 
 .btnCouch {
-    content: url("./styles/img/btn-couch/couch.svg");
+    content: url("../styles/img/btn-couch/couch.svg");
     height: auto;
     width: auto;
 }
 
 .btnBed {
-    content: url("./styles/img/btn-couch/bed.svg")
+    content: url("../styles/img/btn-couch/bed.svg")
 }
 
 .btnCouchSelected {
-    content: url("./styles/img/btn-couch/couch-selected.svg")
+    content: url("../styles/img/btn-couch/couch-selected.svg")
 }
 
 .btnBedSelected {
-    content: url("./styles/img/btn-couch/bed-selected.svg")
+    content: url("../styles/img/btn-couch/bed-selected.svg")
 }
 
 /* COLOR */
